--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -1,12 +1,17 @@
-name: Update Minecraft Resources
+name: Update Minecraft Education Resources
 
 on:
-  # 매주 일요일 00:00 (UTC) 자동 실행
+  # 매주 일요일 오전 12시 (UTC) 실행
   schedule:
     - cron: '0 0 * * 0'
 
   # 수동 실행 가능
   workflow_dispatch:
+    inputs:
+      batch_size:
+        description: 'Number of resources to crawl (default: 50)'
+        required: false
+        default: '50'
 
 jobs:
   update-data:
@@ -23,31 +28,49 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install requests beautifulsoup4 pandas python-dateutil tqdm pydantic
+          python -m pip install --upgrade pip
+          pip install playwright
 
-      - name: Run data update script
+      - name: Install Playwright browsers
         run: |
-          python parse_html.py || echo "크롤링 실패, 계속 진행..."
+          python -m playwright install chromium
+          python -m playwright install-deps chromium
+
+      - name: Run update script
+        env:
+          BATCH_SIZE: ${{ github.event.inputs.batch_size || '50' }}
+        run: |
+          python update_data.py
 
       - name: Check for changes
-        id: changes
+        id: git-check
         run: |
-          if git diff --quiet data/resources.json; then
-            echo "changed=false" >> $GITHUB_OUTPUT
-          else
-            echo "changed=true" >> $GITHUB_OUTPUT
-          fi
+          git diff --exit-code data/resources_enhanced.json || echo "changed=true" >> $GITHUB_OUTPUT
 
       - name: Commit and push if changed
-        if: steps.changes.outputs.changed == 'true'
+        if: steps.git-check.outputs.changed == 'true'
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add data/resources.json
-          git commit -m "🤖 자동 데이터 업데이트 $(date +'%Y-%m-%d')"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add data/resources_enhanced.json
+          git commit -m "🤖 Auto-update: Crawled resources (batch size: ${{ github.event.inputs.batch_size || '50' }})
+
+          Updated Minecraft Education resource data.
+
+          🤖 Generated with [Claude Code](https://claude.com/claude-code)
+
+          Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>"
           git push
 
-      - name: No changes
-        if: steps.changes.outputs.changed == 'false'
+      - name: Summary
+        if: always()
         run: |
-          echo "ℹ️ 변경사항 없음 - 데이터가 이미 최신입니다."
+          echo "## Update Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ steps.git-check.outputs.changed }}" == "true" ]; then
+            echo "✅ Data updated and pushed to repository" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "ℹ️ No changes detected" >> $GITHUB_STEP_SUMMARY
+          fi
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "Streamlit Cloud will automatically redeploy with the new data." >> $GITHUB_STEP_SUMMARY
